--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
   language: python
+  before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y graphviz
   python:
     - "3.6"
   script:
